tests/parser/parse-lisp.2.bad.error
error: Malformed lisp expression
  --> test:4:25
   |
 4 |  (define f (lisp (T -> T)))
   |                          ^ expected binding list
