tests/parser/parse-lisp.2.bad.coalton
;; BAD: Parse Lisp
(package test-package)

(define f (lisp (T -> T)))
